[tool.poetry]
name = "gunicorn-test"
version = "0.1.0"
description = ""
authors = ["Denis Safiullin <fckninja@gmail.com>"]
readme = "README.md"
packages = [{include = "gunicorn_test"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
